tests/samples/invalid/argument_type_mismatch.pn

fn foo(x: i32) -> i32
{
	return: x
}

fn main() -> i32
{
	var x = foo(true);
	var a = true;
	var y = foo(a);
	return: x + y
}
